--- a/logistic-regression-model.ipynb
+++ b/logistic-regression-model.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,12 +214,26 @@
      "text": [
       "Warning: Maximum number of iterations has been exceeded.\n",
       "         Current function value: 0.424139\n",
-      "         Iterations: 35\n",
+      "         Iterations: 35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\base\\model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                               Results: Logit\n",
       "=============================================================================\n",
       "Model:                  Logit                Pseudo R-squared:     0.388     \n",
       "Dependent Variable:     y                    AIC:                  79285.2842\n",
-      "Date:                   2019-06-17 14:36     BIC:                  79899.1257\n",
+      "Date:                   2019-06-18 14:51     BIC:                  79899.1257\n",
       "No. Observations:       93313                Log-Likelihood:       -39578.   \n",
       "Df Model:               64                   LL-Null:              -64649.   \n",
       "Df Residuals:           93248                LLR p-value:          0.0000    \n",
@@ -293,14 +309,6 @@
       "sourcing            -0.0395    0.0181   -2.1777 0.0294     -0.0750    -0.0039\n",
       "=============================================================================\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\base\\model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
-      "  \"Check mle_retvals\", ConvergenceWarning)\n"
      ]
     }
    ],
@@ -398,7 +406,7 @@
       "=======================================================================\n",
       "Model:                Logit              Pseudo R-squared:   0.387     \n",
       "Dependent Variable:   y                  AIC:                79305.7535\n",
-      "Date:                 2019-06-17 14:36   BIC:                79749.6080\n",
+      "Date:                 2019-06-18 14:51   BIC:                79749.6080\n",
       "No. Observations:     93313              Log-Likelihood:     -39606.   \n",
       "Df Model:             46                 LL-Null:            -64649.   \n",
       "Df Residuals:         93266              LLR p-value:        0.0000    \n",
@@ -602,6 +610,276 @@
     "plt.savefig('Log_ROC')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.76031066 0.74343867 0.75549009 0.74792392 0.74738816 0.76158586\n",
+      " 0.76881864 0.74712028 0.77873024 0.77390838 0.74973205 0.75348339\n",
+      " 0.75696677 0.74410504 0.76125402 0.7403537  0.74598071 0.74624866\n",
+      " 0.75669882 0.75133976 0.75375134 0.76152197 0.76098607 0.74196141\n",
+      " 0.77491961]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "cv_results = cross_val_score(lrmodel, X, Y, cv=25)\n",
+    "print(cv_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding out using test data given in the problem set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_testdata = pd.read_csv(\"test-hr-reg.csv\",index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_testdata1 = X_testdata.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "          tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrmodel.fit(X_traindata_final.values, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0,\n",
+       "       0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1,\n",
+       "       0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0,\n",
+       "       0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_prediction_unknown = lrmodel.predict(X_testdata1)\n",
+    "final_prediction_unknown[0:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_prediction_unknown = final_prediction_unknown.tolist()\n",
+    "X_testdata['prediction']=final_prediction_unknown\n",
+    "final = X_testdata['prediction']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "employee_id\n",
+       "8724     1\n",
+       "74430    0\n",
+       "72255    0\n",
+       "38562    0\n",
+       "64486    0\n",
+       "46232    0\n",
+       "54542    1\n",
+       "67269    0\n",
+       "66174    0\n",
+       "76303    1\n",
+       "60245    1\n",
+       "42639    0\n",
+       "30963    0\n",
+       "54055    0\n",
+       "42996    0\n",
+       "12737    0\n",
+       "27561    0\n",
+       "26622    1\n",
+       "31582    0\n",
+       "29793    0\n",
+       "72735    0\n",
+       "5677     0\n",
+       "60889    0\n",
+       "51498    0\n",
+       "8566     0\n",
+       "53151    1\n",
+       "16203    1\n",
+       "61083    1\n",
+       "74849    0\n",
+       "13259    0\n",
+       "        ..\n",
+       "72190    0\n",
+       "27155    0\n",
+       "15959    1\n",
+       "72900    1\n",
+       "57683    1\n",
+       "55174    0\n",
+       "51115    0\n",
+       "50134    1\n",
+       "59775    0\n",
+       "14408    0\n",
+       "4351     0\n",
+       "59625    1\n",
+       "29379    0\n",
+       "67979    0\n",
+       "61451    0\n",
+       "73871    0\n",
+       "52090    0\n",
+       "18488    0\n",
+       "59673    1\n",
+       "39410    0\n",
+       "11837    1\n",
+       "78278    1\n",
+       "27284    0\n",
+       "49291    0\n",
+       "47537    0\n",
+       "53478    0\n",
+       "25600    0\n",
+       "45409    0\n",
+       "1186     0\n",
+       "5973     1\n",
+       "Name: prediction, Length: 23490, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
