--- a/decision-tree-model.ipynb
+++ b/decision-tree-model.ipynb
@@ -68,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=7,\n",
+       "DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=7,\n",
        "            max_features=None, max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=5, min_samples_split=2,\n",
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "clf_gini = DecisionTreeClassifier(criterion = \"gini\", random_state = 42,\n",
+    "clf_gini = DecisionTreeClassifier(criterion = \"entropy\", random_state = 42,\n",
     "                               max_depth=7, min_samples_leaf=5)\n",
     "clf_gini.fit(X_train, Y_train)"
    ]
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is  78.2703436450668\n"
+      "Accuracy is  78.79902836322069\n"
      ]
     }
    ],
@@ -145,8 +145,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 9863,  4458],\n",
-       "       [ 1625, 12048]], dtype=int64)"
+       "array([[ 9915,  4406],\n",
+       "       [ 1529, 12144]], dtype=int64)"
       ]
      },
      "execution_count": 10,
@@ -181,12 +181,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.69      0.76     14321\n",
-      "           1       0.73      0.88      0.80     13673\n",
+      "           0       0.87      0.69      0.77     14321\n",
+      "           1       0.73      0.89      0.80     13673\n",
       "\n",
-      "   micro avg       0.78      0.78      0.78     27994\n",
-      "   macro avg       0.79      0.78      0.78     27994\n",
-      "weighted avg       0.80      0.78      0.78     27994\n",
+      "   micro avg       0.79      0.79      0.79     27994\n",
+      "   macro avg       0.80      0.79      0.79     27994\n",
+      "weighted avg       0.80      0.79      0.79     27994\n",
       "\n"
      ]
     }
@@ -204,8 +204,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.78429061 0.78129018 0.7840763  0.79080484 0.7807309  0.78158825\n",
-      " 0.78233844 0.78298146 0.78791126 0.784589  ]\n"
+      "[0.79725675 0.79147021 0.79157737 0.79594899 0.7905905  0.79219805\n",
+      " 0.78844711 0.78951881 0.7962705  0.79316258]\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7840601258483135"
+       "0.7926440863323417"
       ]
      },
      "execution_count": 14,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0],\n",
+       "array([1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0],\n",
        "      dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +324,7 @@
        "12737    1\n",
        "27561    0\n",
        "26622    1\n",
-       "31582    0\n",
+       "31582    1\n",
        "29793    0\n",
        "72735    0\n",
        "5677     0\n",
@@ -338,7 +338,7 @@
        "13259    0\n",
        "        ..\n",
        "61754    0\n",
-       "72190    1\n",
+       "72190    0\n",
        "27155    0\n",
        "15959    1\n",
        "72900    1\n",
@@ -370,7 +370,7 @@
        "Name: prediction, Length: 22456, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "clf_entropy = DecisionTreeClassifier(criterion = \"entropy\", random_state = 100,\n",
+    "clf_entropy = DecisionTreeClassifier(criterion = \"gini\", random_state = 100,\n",
     " max_depth=7, min_samples_leaf=5)\n",
     "clf_entropy.fit(X_train, Y_train)"
    ]
