--- a/decision-tree-model.ipynb
+++ b/decision-tree-model.ipynb
@@ -29,6 +29,92 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 52399 entries, 65438 to 51526\n",
+      "Data columns (total 65 columns):\n",
+      "age                   52399 non-null int64\n",
+      "length_of_service     52399 non-null int64\n",
+      "KPIs_met >80%         52399 non-null int64\n",
+      "awards_won?           52399 non-null int64\n",
+      "avg_training_score    52399 non-null int64\n",
+      "is_promoted           52399 non-null int64\n",
+      "region_10             52399 non-null int64\n",
+      "region_11             52399 non-null int64\n",
+      "region_12             52399 non-null int64\n",
+      "region_13             52399 non-null int64\n",
+      "region_14             52399 non-null int64\n",
+      "region_15             52399 non-null int64\n",
+      "region_16             52399 non-null int64\n",
+      "region_17             52399 non-null int64\n",
+      "region_18             52399 non-null int64\n",
+      "region_19             52399 non-null int64\n",
+      "region_2              52399 non-null int64\n",
+      "region_20             52399 non-null int64\n",
+      "region_21             52399 non-null int64\n",
+      "region_22             52399 non-null int64\n",
+      "region_23             52399 non-null int64\n",
+      "region_24             52399 non-null int64\n",
+      "region_25             52399 non-null int64\n",
+      "region_26             52399 non-null int64\n",
+      "region_27             52399 non-null int64\n",
+      "region_28             52399 non-null int64\n",
+      "region_29             52399 non-null int64\n",
+      "region_3              52399 non-null int64\n",
+      "region_30             52399 non-null int64\n",
+      "region_31             52399 non-null int64\n",
+      "region_32             52399 non-null int64\n",
+      "region_33             52399 non-null int64\n",
+      "region_34             52399 non-null int64\n",
+      "region_4              52399 non-null int64\n",
+      "region_5              52399 non-null int64\n",
+      "region_6              52399 non-null int64\n",
+      "region_7              52399 non-null int64\n",
+      "region_8              52399 non-null int64\n",
+      "region_9              52399 non-null int64\n",
+      "Below Secondary       52399 non-null int64\n",
+      "Master's & above      52399 non-null int64\n",
+      "Finance               52399 non-null int64\n",
+      "HR                    52399 non-null int64\n",
+      "Legal                 52399 non-null int64\n",
+      "Operations            52399 non-null int64\n",
+      "Procurement           52399 non-null int64\n",
+      "R&D                   52399 non-null int64\n",
+      "Sales & Marketing     52399 non-null int64\n",
+      "Technology            52399 non-null int64\n",
+      "t2                    52399 non-null int64\n",
+      "t3                    52399 non-null int64\n",
+      "t4                    52399 non-null int64\n",
+      "t5                    52399 non-null int64\n",
+      "t6                    52399 non-null int64\n",
+      "t7                    52399 non-null int64\n",
+      "t8                    52399 non-null int64\n",
+      "t9                    52399 non-null int64\n",
+      "t10                   52399 non-null int64\n",
+      "m                     52399 non-null int64\n",
+      "r2                    52399 non-null int64\n",
+      "r3                    52399 non-null int64\n",
+      "r4                    52399 non-null int64\n",
+      "r5                    52399 non-null int64\n",
+      "referred              52399 non-null int64\n",
+      "sourcing              52399 non-null int64\n",
+      "dtypes: int64(65)\n",
+      "memory usage: 26.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "traindata.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Y = traindata['is_promoted'].values\n",
@@ -38,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -81,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +176,7 @@
        "[0.5476144027646174, 5.75051214515657]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -169,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +352,7 @@
        "            presort=False, random_state=42, splitter='best')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,42 +363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.76035108 0.77427972 0.76092349 0.7620229  0.76526718 0.75629771\n",
-      " 0.76713113 0.75224279 0.77629319 0.76350449]\n"
+      "[0.7585856  0.76876113 0.75521628 0.78142494 0.78142494 0.75928753\n",
+      " 0.76590331 0.77398829 0.76457114 0.76737083]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
-    "cv_results = cross_val_score(clf_entropy, X, Y, cv=10)\n",
+    "cv_results = cross_val_score(clf_entropy, X_train, Y_train, cv=10)\n",
     "print(cv_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7638313667426354"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(cv_results)"
    ]
   },
   {
@@ -323,11 +389,31 @@
     {
      "data": {
       "text/plain": [
+       "0.7676533990720367"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cv_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "array([1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1],\n",
        "      dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +446,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +467,7 @@
        "       [ 250,  879]], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +501,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -453,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +639,7 @@
        "            presort=False, random_state=42, splitter='best')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +663,7 @@
        "       0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -673,7 +759,7 @@
        "Name: prediction, Length: 22456, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
