--- a/logistic-regression-model.ipynb
+++ b/logistic-regression-model.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -316,26 +316,12 @@
      "text": [
       "Warning: Maximum number of iterations has been exceeded.\n",
       "         Current function value: 0.198006\n",
-      "         Iterations: 35\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\base\\model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
-      "  \"Check mle_retvals\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         Iterations: 35\n",
       "                              Results: Logit\n",
       "==========================================================================\n",
       "Model:                 Logit               Pseudo R-squared:    0.329     \n",
       "Dependent Variable:    y                   AIC:                 20880.5893\n",
-      "Date:                  2019-06-27 10:33    BIC:                 21456.9211\n",
+      "Date:                  2019-06-27 14:26    BIC:                 21456.9211\n",
       "No. Observations:      52399               Log-Likelihood:      -10375.   \n",
       "Df Model:              64                  LL-Null:             -15456.   \n",
       "Df Residuals:          52334               LLR p-value:         0.0000    \n",
@@ -411,6 +397,14 @@
       "sourcing            -0.0066    0.0380  -0.1728 0.8628    -0.0810    0.0679\n",
       "==========================================================================\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\statsmodels\\base\\model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
      ]
     }
    ],
@@ -778,20 +772,6 @@
    "source": [
     "final"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
