--- a/decision-tree-model.ipynb
+++ b/decision-tree-model.ipynb
@@ -762,43 +762,7 @@
        "60889    0\n",
        "51498    1\n",
        "8566     0\n",
-       "53151    1\n",
-       "16203    1\n",
-       "61083    1\n",
-       "74849    0\n",
-       "13259    0\n",
-       "        ..\n",
-       "61754    0\n",
-       "72190    1\n",
-       "27155    0\n",
-       "15959    1\n",
-       "72900    1\n",
-       "57683    1\n",
-       "55174    0\n",
-       "51115    0\n",
-       "50134    1\n",
-       "59775    0\n",
-       "14408    0\n",
-       "4351     0\n",
-       "59625    1\n",
-       "29379    0\n",
-       "67979    0\n",
-       "61451    0\n",
-       "73871    0\n",
-       "52090    0\n",
-       "18488    0\n",
-       "59673    1\n",
-       "39410    0\n",
-       "11837    0\n",
-       "78278    1\n",
-       "49291    0\n",
-       "47537    0\n",
-       "53478    0\n",
-       "25600    0\n",
-       "45409    0\n",
-       "1186     0\n",
-       "5973     1\n",
-       "Name: prediction, Length: 22456, dtype: int64"
+       "Name: prediction, dtype: int64"
       ]
      },
      "execution_count": 32,
@@ -807,15 +771,17 @@
     }
    ],
    "source": [
-    "final"
+    "final[0:25]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final.to_csv('test-data-prediction-decision-tree-model.csv')"
+   ]
   }
  ],
  "metadata": {
