--- a/logistic-regression-model.ipynb
+++ b/logistic-regression-model.ipynb
@@ -268,7 +268,7 @@
       "==========================================================================\n",
       "Model:                 Logit               Pseudo R-squared:    0.329     \n",
       "Dependent Variable:    y                   AIC:                 20880.5893\n",
-      "Date:                  2019-07-02 15:58    BIC:                 21456.9211\n",
+      "Date:                  2019-07-02 16:29    BIC:                 21456.9211\n",
       "No. Observations:      52399               Log-Likelihood:      -10375.   \n",
       "Df Model:              64                  LL-Null:             -15456.   \n",
       "Df Residuals:          52334               LLR p-value:         0.0000    \n",
@@ -739,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -770,43 +772,7 @@
        "60889    0\n",
        "51498    1\n",
        "8566     0\n",
-       "53151    1\n",
-       "16203    1\n",
-       "61083    1\n",
-       "74849    0\n",
-       "13259    0\n",
-       "        ..\n",
-       "61754    0\n",
-       "72190    1\n",
-       "27155    0\n",
-       "15959    1\n",
-       "72900    1\n",
-       "57683    0\n",
-       "55174    1\n",
-       "51115    0\n",
-       "50134    1\n",
-       "59775    1\n",
-       "14408    0\n",
-       "4351     0\n",
-       "59625    1\n",
-       "29379    1\n",
-       "67979    0\n",
-       "61451    0\n",
-       "73871    0\n",
-       "52090    0\n",
-       "18488    0\n",
-       "59673    1\n",
-       "39410    0\n",
-       "11837    1\n",
-       "78278    1\n",
-       "49291    0\n",
-       "47537    0\n",
-       "53478    0\n",
-       "25600    0\n",
-       "45409    0\n",
-       "1186     0\n",
-       "5973     1\n",
-       "Name: prediction, Length: 22456, dtype: int64"
+       "Name: prediction, dtype: int64"
       ]
      },
      "execution_count": 29,
@@ -815,7 +781,16 @@
     }
    ],
    "source": [
-    "final"
+    "final[0:25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_csv('test-data-prediction-logistic-regression-model.csv')"
    ]
   }
  ],
